--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-                <link rel="stylesheet" href="css/style.css">
+                
                 <link rel="stylesheet" href="modern-normalize/modern-normalize.css">
+                <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Студія</title>
@@ -46,8 +47,10 @@
     <!--Банер та кнопка-->
    
     <section class="bg">
+        <div class="container">
         <h1 class="index_bisnes">Ефективні рішення для вашого бізнесу</h1>
         <button class="index_btn" type="button ">Замовити послугу</button>
+        </div>
     </section>
 
     <!-- Опис-->
