--- a/portfolio.html
+++ b/portfolio.html
@@ -51,41 +51,41 @@
             <ul class="billboard">
                 <li class="portfolio_item"><img  src="images/technocrack.jpg" alt="Технокряк">
                     <div class="padding_item">
-                    <h2>Технокряк</h2>
+                    <h2 class="margin_item">Технокряк</h2>
                     <p class="portfolio_hav_about">Веб-сайт</p>
                 </div>
                 </li>
                 
                 <li class="portfolio_item"><img src="images/poster-new-orlean-vs-golden-star.jpg"  alt="Постер New Orlean vs Golden Star">
                     <div class="padding_item">
-                <h2>Постер New Orlean vs Golden Star</h2>
+                <h2 class="margin_item">Постер New Orlean vs Golden Star</h2>
                     <p class="portfolio_hav_about">Дизайн</p>
                 </div>
                 </li>
 
                 <li class="portfolio_item"><img src="images/restoran-seafood.jpg"  alt="Ресторан Seafood">
                     <div class="padding_item">
-                <h2>Ресторан Seafood</h2>
+                <h2 class="margin_item">Ресторан Seafood</h2>
                     <p class="portfolio_hav_about">Додаток</p>
                 </div>
             </li>
 
                 <li class="portfolio_item"><img src="images/project-prime.jpg"  alt="Проєкт Prime">
                     <div class="padding_item">
-                <h2>Проєкт Prime</h2>
+                <h2 class="margin_item">Проєкт Prime</h2>
                 <p class="portfolio_hav_about">Маркетинг</p>
             </div>
             </li>
 
                 <li class="portfolio_item"><img src="images/project-boxes.jpg"  alt="Проєкт Boxes">
                     <div class="padding_item">
-                <h2>Проєкт Boxes</h2>
+                <h2 class="margin_item">Проєкт Boxes</h2>
                 <p class="portfolio_hav_about">Додаток</p>
             </div>
             </li>
                 <li class="portfolio_item"><img src="images/inspiration-has-no-borders.jpg"  alt="Inspiration has no Borders">
                     <div class="padding_item">
-                    <h2>Inspiration has no Borders</h2>
+                    <h2 class="margin_item">Inspiration has no Borders</h2>
 
                 <p class="portfolio_hav_about">Веб-сайт</p>
             </div>
@@ -93,21 +93,21 @@
 
                 <li class="portfolio_item"><img src="images/booking-limited-edition.jpg"  alt="Видання Limited Edition">
                     <div class="padding_item">
-                <h2>Видання Limited Edition</h2>
+                <h2 class="margin_item">Видання Limited Edition</h2>
                 <p class="portfolio_hav_about">Дизайн</p>
             </div>
             </li>
 
                 <li class="portfolio_item"><img src="images/project-lab.jpg"  alt="Проєкт LAB">
                     <div class="padding_item">
-                <h2>Проєкт LAB</h2>
+                <h2 class="margin_item">Проєкт LAB</h2>
                     <p class="portfolio_hav_about">Маркетинг</p>
                 </div>
             </li>
 
                 <li class="portfolio_item"><img src="images/growing-business.jpg"  alt="Growing Business">
                     <div class="padding_item">
-                <h2>Growing Business</h2>
+                <h2 class="margin_item">Growing Business</h2>
                 <p class="portfolio_hav_about">Додаток</p>
             </div>
                 </li>
