--- a/portfolio.html
+++ b/portfolio.html
@@ -120,12 +120,12 @@
     <!--Нижнє табло з інформаціею-->
     <footer class="footer_container">
         <div class="container_footer_div">
-        <a class="footer_studio"  href="#"> <span class="logo_footer">Web</span>Studio</a>
+        <a class="footer_studio"> <span class="logo_footer">Web</span>Studio</a>
     
         <ul class="index_ul_adres">
-            <li ><a class="info_adres" href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank" rel="адреса">м. Київ, пр-т Лесі Украінки, 26</a> </li>
-            <li ><a class="main_about_footer" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a></li>
-            <li ><a class="tell_about_footer" href="tel:+380961111111">+38096111111</a></li>
+            <li class="index_footer_li"><a class="info_adres" href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank" rel="адреса">м. Київ, пр-т Лесі Украінки, 26</a> </li>
+            <li class="index_footer_li"><a class="main_about_footer" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a></li>
+            <li class="index_footer_li"><a class="tell_about_footer" href="tel:+380961111111">+38096111111</a></li>
         </ul>
     </div>
     </footer>
